postgres-macros/tests/fail-stable/datetime_vs_date.stderr
error[E0271]: type mismatch resolving `<Date as SqlType>::Type == OffsetDateTime`
 --> tests/fail-stable/datetime_vs_date.rs:6:10
  |
6 |         .await
  |          ^^^^^ expected `Date`, found `OffsetDateTime`
  |
  = note: required for `Sql<'_, Primitive<OffsetDateTime>, time::Date>` to implement `IntoFuture`
